<resources>
    <string name="app_name">UptoSkills</string>
    <string name="back_button_desc">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1262416964212805</string>
    <string name="fb_login_protocol_scheme">fb1262416964212805</string>
    <string name="razorpay_api_key">rzp_test_oLqKrYVjxIjTTh</string>
    <string name="terms_of_use">Effective: April 1, 2021. Thank you for using UptoSkills! Services, you agree to be bound by these Terms, including the policies referenced in these Terms. UptoSkills offers products and services provided by UptoSkills,, our subsidiaries, and our international branches ("UptoSkills," "us," "we," or "our"). These Terms of Use ("Terms") govern your use of our website, apps, and other products and services ("Services"). As some of our Services may be software that is downloaded to your computer, phone, tablet, or other device, you agree that we may automatically update this software, and that these Terms will apply to such updates. Please read these Terms carefully, and contact us if you have any questions. By using our THESE TERMS INCLUDE AN ARBITRATION AGREEMENT AND CLASS ACTION WAIVER THAT APPLY TO ALL CLAIMS BROUGHT AGAINST UPTOSKILLS. PLEASE READ THEM CAREFULLY; THEY AFFECT YOUR LEGAL RIGHTS.</string>
    <string name="using_uptoskills">Who May Use our Services You may use our Services only if you can form a binding contract with UptoSkills, and only in compliance with these Terms and all applicable laws. When you create your UptoSkills account, and subsequently when you use certain features, you must provide us with accurate and complete information, and you agree to update your information to keep it accurate and complete. Any use or access by anyone under the age of 13 is prohibited, and certain regions and Content Offerings may have additional requirements and/or restrictions.</string>
    <string name="who_may_use">You may use our Services only if you can form a binding contract with UptoSkills, and only in compliance with these Terms and all applicable laws. When you create your UptoSkills account, and subsequently when you use certain features, you must provide us with accurate and complete information, and you agree to update your information to keep it accurate and complete. Any use or access by anyone under the age of 13 is prohibited, and certain regions and Content Offerings may have additional requirements and/or restrictions.</string>
    <string name="licence">Subject to these Terms and our policies (including the Acceptable Use Policy, Honor Code, course-specific eligibility requirements, and other terms), we grant you a limited, personal, non-exclusive, non-transferable, and revocable license to use our Services. You may download content from our Services only for your personal, non-commercial use, unless you obtain our written permission to otherwise use the content. You also agree that you will create, access, and/or use only one user account, unless expressly permitted by UptoSkills, and you will not share access to your account or access information for your account with any third party. Using our Services does not give you ownership of or any intellectual property rights in our Services or the content you access.</string>
    <string name="content_offering">UptoSkills offers courses and content ("Content Offerings") from universities and other providers ("Content Providers"). While we seek to provide world-class Content Offerings from our Content Providers, unexpected events do occur. UptoSkills reserves the right to cancel, interrupt, reschedule, or modify any Content Offerings, or change the point value or weight of any assignment, quiz, or other assessment, either solely, or in accordance with Content Provider instructions. Content Offerings are subject to the Disclaimers and Limitation of Liability sections below.</string>
    <string name="paid_services">UptoSkills offers paid Services (e.g., course certificates for certain courses) for a fee. Unless otherwise stated, all fees are quoted in Indian Rupees. You are responsible for paying all fees charged by or for UptoSkills and applicable taxes in a timely manner with a payment mechanism associated with the applicable paid Services. If your payment method fails or your account is past due, we may collect fees using other collection mechanisms. Fees may vary based on your location and other factors, and UptoSkills reserves the right to change any fees at any time at its sole discretion. Any change, update, or modification will be effective immediately upon posting through the relevant Services. Refunds may be available for paid Services as described in our Refund Policy below.</string>
    <string name="disclaimers">THE SERVICES AND ALL INCLUDED CONTENT ARE PROVIDED ON AN "AS IS" BASIS WITHOUT WARRANTY OF ANY KIND, WHETHER EXPRESS OR IMPLIED. THE UPTOSKILLS PARTIES SPECIFICALLY DISCLAIM ANY AND ALL WARRANTIES AND CONDITIONS OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT, AND ANY WARRANTIES ARISING OUT OF COURSE OF DEALING OR USAGE OF TRADE. THE UptoSkills PARTIES FURTHER DISCLAIM ANY AND ALL LIABILITY RELATED TO YOUR ACCESS OR USE OF THE SERVICES OR ANY RELATED CONTENT. YOU ACKNOWLEDGE AND AGREE THAT ANY ACCESS TO OR USE OF THE SERVICES OR SUCH CONTENT IS AT YOUR OWN RISK.UptoSkills also respects the trademark rights of others. Accounts with any other content that misleads others or violates another"s trademark may be updated, suspended, disabled, or terminated by UptoSkills in its sole discretion. If you are concerned that someone may be using your trademark without proper permission on our Services, please email us at info@UptoSkills.com, and we will review your submission. If we deem appropriate, we may remove the offending content, warn the individual who posted the content, and/or temporarily or permanently suspend or disable the individual’s account.</string>
    <string name="other_paid_services">Except as described in this Refund Policy or as explicitly stated as part of the sign-up process for a Service, UptoSkills has no obligation to provide refunds or vouchers for any other Services.</string>
    <string name="third_party_marketPlaces">Notwithstanding the foregoing, if you purchase or subscribe for a course, specialization, guided project, or purchase any other paid Service, through a third party marketplace (e.g., in-app purchases through the Apple App Store or purchases made through certain alternative payment services), the refund policy applicable to that third party marketplace will apply, unless otherwise explicitly stated by UptoSkills. Except as otherwise explicitly stated by UptoSkills, the third party marketplace will be solely responsible for making refunds under its refund policy, and UptoSkills will have no refund obligations. UptoSkills disclaims any responsibility or liability related to any third party marketplace"s refund policy or the third party"s compliance or noncompliance with such policy. Honor Code Effective as of April 1, 2021 All users participating in Content Offerings must agree to abide by the following code: I will register for only one account, unless expressly permitted to register for additional accounts by UptoSkills. My answers to homework, quizzes, exams, projects, and other assignments will be my own work (except for assignments that explicitly permit collaboration) as specified in the UptoSkills Plagiarism Policy. I will not make solutions to homework, quizzes, exams, projects, and other assignments available to anyone else (except to the extent an assignment explicitly permits sharing solutions). This includes both solutions written by me, as well as any solutions provided by the course staff or others. I will not engage in any other activities that will dishonestly improve my results or dishonestly improve or hurt the results of others. Any violation of this code may result in your access to all or part of the Services being suspended, disabled, or terminated. © 2021 UptoSkills All rights reserved</string>
    <string name="create_account">Create Your Account</string>
    <string name="login">Login</string>
    <string name="email_id">Email Id</string>
    <string name="forget_pass">Forgot Password?</string>
    <string name="razorpay_secret_key">47e4PYyqaDkc4C6KOvTwaRnd</string>
    <string name="default_web_client_id">938352423195-qs3p5n89a8vuhqi50as9eubgsk8rltuu.apps.googleusercontent.com</string>
    <string name="view_more"><u>View More +</u>.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="courses_text">We’ll then ask you to tell us your current level of English or invite you to take our quick 20 minute placement test so we can make sure you start learning English.</string>
    <string name="learn_without_limits">LEARN WITHOUT LIMITS</string>
</resources>