<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".course">

        <ImageView
            android:id="@+id/back"
            android:src="@drawable/baseline_keyboard_arrow_left_24"
            android:layout_width="@dimen/dim_40"
            android:layout_height="@dimen/dim_40"
            android:layout_margin="10dp"
            android:contentDescription="@string/back_button_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="fitCenter"/>

        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/uptoskills_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_50"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RelativeLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="@dimen/dim_20"
            android:background="@drawable/course_banner"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ONLINE"
                android:layout_marginTop="25dp"
                android:layout_marginStart="40dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/darkGray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EDUCATION"
                android:layout_marginTop="53dp"
                android:layout_marginStart="25dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Courses"
                android:layout_marginTop="80dp"
                android:layout_marginStart="110dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/dim_10"
            android:layout_marginTop="@dimen/dim_25"
            app:layout_constraintTop_toBottomOf="@id/banner">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn_without_limits"
                android:textSize="@dimen/dim_14"
                android:layout_gravity="center_horizontal"
                android:textColor="#F62A2A"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Explore Our Online Courses"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courses_text"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dim_5"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/AndroidGreen"
            app:tabSelectedTextColor="@color/AndroidGreen"
            app:tabTextColor="@android:color/black"
            app:tabMode="scrollable"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/explore"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

      <FrameLayout
          android:id="@+id/FragmentCont"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          app:layout_constraintTop_toBottomOf="@id/viewPager"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
